--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 	<head>
 		<meta charset=utf-8>
 		<title>The Year Of: </title>
-		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Nobile:bold">
+		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Nobile:bold">
+		<!-- <link rel="stylesheet" href="css/grid.css"> -->
 		<style type="text/css" media="screen">
 			/* http://meyerweb.com/eric/tools/css/reset/ */
 			/* v1.0 | 20080212 */
@@ -64,18 +65,19 @@
 				font: normal 700 16px/24px "Franklin Gothic", Arial, "Helvetica Neue", Helvetica, sans-serif;
 			}
 			h1 {
-				font: normal 500 160px "Franklin Gothic Heavy", "Arial Black", Gadget, sans-serif;
+				font: normal 500 158px/110px "Franklin Gothic Heavy", "Arial Black", Gadget, sans-serif;
 				text-transform: uppercase;
-				height: 160px;
-				margin: -32px 0 0 6px;
+				height: 110px;
+				margin: 55px 0 28px 28px;
 				white-space: nowrap;
+				width: 940px;
 			}
 			h2 {
 				background-color: rgb(0,0,0); /* no dk blue */
 				color: rgb(255,255,255);
-				font: normal 500 36px/36px "Franklin Gothic Heavy", "Arial Black", Gadget, sans-serif;
+				font: normal 500 28px/28px "Franklin Gothic Heavy", "Arial Black", Gadget, sans-serif;
 				margin: 0 0 6px;
-				padding: 0 0 1px 4px;
+				padding: 0 0 1px 3px;
 				text-transform: uppercase;
 				width: 300px;
 			}
@@ -86,12 +88,12 @@
 			}
 			ul {
 				height: 100%;
-				margin: 10px 0 0;
+				margin: 0;
 				overflow: hidden;
 			}
 			ul > li {
 				float: left;
-				margin: 0 10px;
+				margin: 0 0 0 28px;
 			}
 			ol {
 				height: 160px;
@@ -99,7 +101,7 @@
 		</style>
 	</head>
 	<body>
-		<h1>The Year Of:</h1>
+		<h1>The Year Of</h1>
 		<ul>
 			<li><h2>Everything</h2>
 				<ol>
