--- a/index.html
+++ b/index.html
@@ -65,12 +65,10 @@
 				font: normal 700 16px/24px "Franklin Gothic", Arial, "Helvetica Neue", Helvetica, sans-serif;
 			}
 			h1 {
-				font: normal 500 158px/110px "Franklin Gothic Heavy", "Arial Black", Gadget, sans-serif;
+				font: normal 500 12vw/18vw "Franklin Gothic Heavy", "Arial Black", Gadget, sans-serif;
 				text-transform: uppercase;
-				height: 110px;
-				margin: 55px 0 28px 28px;
+				margin: 4vw;
 				white-space: nowrap;
-				width: 940px;
 			}
 			h2 {
 				background-color: rgb(0,0,0); /* no dk blue */
